Commit to some API introduced in JDK 9