@@ -2,11 +2,8 @@ package com.pholser.dulynoted;
 
 import java.lang.annotation.Annotation;
 import java.lang.reflect.AnnotatedElement;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-
-import static java.util.Collections.unmodifiableList;
 
 public final class Presence
     implements SingleByTypeDetector, AllDetector {
@@ -19,6 +16,6 @@ public final class Presence
     }
 
     @Override public List<Annotation> all(AnnotatedElement target) {
-        return unmodifiableList(Arrays.asList(target.getAnnotations()));
+        return List.of(target.getAnnotations());
     }
 }
